src/css/opentosca.css
body {
    margin: 0px;
    padding: 0px;
    font-family: Calibri, Arial;
    background: rgb(255, 255, 255);
    color: #5D5D5D;
}

a, p, div {
    font-size: 12pt ;
}

a {
    text-decoration: none;
    color: #377ebf;
}

table {
    border-spacing: 0px ;
}

td {
    padding: 0px ;
    vertical-align: top ;
}

div.openTOSCALogoContainer {
    float: left;
    width: 210px;
    height: 80px;
    background: url('../assets/img/OpenTOSCA_Head_Icon.png');
    background-size: 194px;
    background-position: 12px 3px;
"
}

div.breadcrumbContainer {
    margin-left: 22px;
    margin-top: 26px;
}

table.layoutTable {
    padding: 0px ;
    width: 100% ;
    border-spacing: 0px 
}

.menu a {
    background: #adadad;
    color: #ffffff;
}

.menu a.selected {
    background: #ffffff;
    color: #5D5D5D;
}

.menu a:hover {
    background-color: #8da8c1;
    color: #ffffff;
}

.menu div.pageTopicIcon {
    text-align: center;
    margin-top: 25px;
    margin-left: 20px;
}

.menu div.pageTopicIcon > img {
    width: 100px;
}

.menu div.pageTopicIcon > span {
    display: block;
    padding: 0px 15px;
    text-align: center;
    font-style: italic;
}

a.iconTextButton {
    padding: 6px 9px;
    border: 1px solid #adadad;
    border-radius: 4px;
    box-shadow: 0px 0px 6px #D2D2D2;
}

a.iconTextButton:hover {
    background-color: #8da8c1;
    color: white;
}

a.editInWineryButton:before {
    content: "";
}

#mainMenu {
    background: #EFEFEF;
    height: 80px;
    width: 100%;
    border-bottom: 1px solid #adadad;
    background-image: url('../assets/img/background.jpg');
}

#mainMenu > a {
    margin-top: 50px;
    display: inline-block;
    padding: 0px 20px 0px 32px;
    border-radius: 8px 8px 0px 0px;
    height: 30px;
    line-height: 30px;
    margin-right: 6px;
    border-left: 1px solid #adadad;
    border-top: 1px solid #adadad;
    border-right: 1px solid #adadad;
    position: relative;
}

#mainMenu > a:hover {
    border-left: 1px solid #8da8c1;
    border-top: 1px solid #8da8c1;
    border-right: 1px solid #8da8c1;
}

#mainMenu > a:before {
    position: absolute;
    content: '';
    top: 5px;
    height: 20px;
    width: 15px;
    display: block;
    left: 9px;
}

#mainMenu > a#applicationsButton:before {
    background: url('../assets/img/Applications_Button_Icon.png');
    background-repeat: no-repeat;
}

#mainMenu > a.selected#applicationsButton:before {
    background: url('../assets/img/Applications_Button_Icon_Hover.png');
    background-repeat: no-repeat;
}

#mainMenu > a#marketplaceButton:before {
    background: url('../assets/img/Marketplace_Button_Icon.png');
    background-repeat: no-repeat;
}

#mainMenu > a.selected#marketplaceButton:before {
    background: url('../assets/img/Marketplace_Button_Icon_Hover.png');
    background-repeat: no-repeat;
}

#mainMenu > a#administrationButton:before {
    background: url('../assets/img/Administration_Button_Icon.png');
    background-repeat: no-repeat;
}

#mainMenu > a.selected#administrationButton:before {
    background: url('../assets/img/Administration_Button_Icon_Hover.png');
    background-repeat: no-repeat;
}

#mainMenu > a#aboutButton:before {
    background: url('../assets/img/About_Button_Icon.png');
    background-repeat: no-repeat;
}

#mainMenu > a.selected#aboutButton:before {
    background: url('../assets/img/About_Button_Icon_Hover.png');
    background-repeat: no-repeat;
}

#subMenu {
    width: 210px;
}

#subMenu > a {
    margin-top: 10px;
    display: inline-block;
    padding: 0px 30px;
    border-radius: 8px 0px 0px 8px;
    height: 30px;
    width: 191px;
    line-height: 30px;
    position: relative;
    left: 20px;
    top: 0px;
    border-left: 1px solid #adadad;
    border-top: 1px solid #adadad;
    border-bottom: 1px solid #adadad;
    box-sizing: border-box;
}

#subMenu > a:before {
    position: absolute;
    content: '';
    top: 5px;
    height: 20px;
    width: 15px;
    display: block;
    left: 9px;
}

#subMenu > a.selected#descriptionButton:before {
    background: url('../assets/img/Description_Button_Icon_Hover.png');
    background-repeat: no-repeat;
}

#subMenu > a#statisticsButton:before {
    background: url('../assets/img/Statistics_Button_Icon.png');
    background-repeat: no-repeat;
}

#subMenu > a#instancesButton:before {
    background: url('../assets/img/Instances_Button_Icon.png');
    background-repeat: no-repeat;
}

#subMenu > a:hover {
    border-left: 1px solid #8da8c1;
    border-top: 1px solid #8da8c1;
    border-bottom: 1px solid #8da8c1;
}

#content {
    border-radius: 8px;
    border: 1px solid #adadad;
    margin-top: 30px;
    margin-right: 25px;
    padding: 24px 24px;
    margin-bottom: 15px;
    min-height: 400px;
}

#content h2 {
    border-bottom: 1px solid #adadad;
    height: 26px;
    font-weight: normal;
    font-size: 15px;
    margin-top: 0px;
}

#content p {
    margin-top: 7px;
    text-align: justify;
    padding: 0px 10px;
}

#content div.applicationTilesContainer {
    margin: 20px;
    padding-top: 8px;
}

#content div.applicationTilesContainer div.applicationTile {
    width: 150px;
    height: 205px;
    margin-right: 25px;
    border-radius: 8px;
    border: 1px solid #adadad;
    box-shadow: 3px 3px 5px #dadada;
    text-align: center;
    background: rgb(255, 255, 255);
    background: -moz-linear-gradient(top, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 1) 60%, rgba(242, 242, 242, 1) 100%);
    background: -webkit-linear-gradient(top, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 1) 60%, rgba(242, 242, 242, 1) 100%);
    background: linear-gradient(to bottom, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 1) 60%, rgba(242, 242, 242, 1) 100%);
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#f2f2f2', GradientType=0);
    overflow-y: hidden;
    transition: all 0.2s ease;
    margin-bottom: 25px;
    display: inline-block;
}

#content div.applicationTilesContainer div.applicationTile:hover {
    border-color: #3792d5;
    box-shadow: 3px 3px 5px #bde3ff;
}

#content div.applicationTilesContainer div.applicationTile img {
    display: block;
    max-height: 100px;
    max-width: 100px;
    margin-left: 25px;
    margin-top: 20px;
}

#content div.applicationTilesContainer div.applicationTile h1 {
    margin: 8px 5px 5px;
    font-weight: normal;
    font-size: 12pt;
    text-align: center;
    height: 40px;
    line-height: 40px;
}

#content div.searchBox {
    margin-bottom: 25px;
}



.btn-file {
    position: relative;
    overflow: hidden;
}
.btn-file input[type=file] {
    position: absolute;
    top: 0;
    right: 0;
    min-width: 100%;
    min-height: 100%;
    font-size: 100px;
    text-align: right;
    filter: alpha(opacity=0);
    opacity: 0;
    outline: none;
    background: white;
    cursor: inherit;
    display: block;
}

